--- a/3_workers.yml
+++ b/3_workers.yml
@@ -25,4 +25,6 @@
   gather_facts: false
   tasks:
     - name: helm init
-      shell: helm init --tiller-namespace default
+      shell: kubectl create serviceaccount --namespace kube-system tiller&&kubectl create clusterrolebinding tiller-cluster-rule --clusterrole=cluster-admin --serviceaccount=kube-system:tiller&&kubectl patch deploy --namespace kube-system tiller-deploy -p '{"spec":{"template":{"spec":{"serviceAccount":"tiller"}}}}'
+
+
